[package]
name = "wdl-analysis"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Analysis of Workflow Description Language (WDL) documents."
documentation = "https://docs.rs/wdl-analysis"

[dependencies]
wdl-ast = { path = "../wdl-ast", version = "0.3.0" }
wdl-lint = { path = "../wdl-lint", version = "0.2.0", optional = true }
anyhow = { workspace = true }
rowan = { workspace = true }
url = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
petgraph = { workspace = true }
futures = { workspace = true }
glob = { workspace = true }
path-clean = { workspace = true }
clap = { workspace = true, optional = true }
colored = { workspace = true, optional = true }
codespan-reporting = { workspace = true, optional = true }
env_logger = { workspace = true, optional = true }
indicatif = { workspace = true, optional = true }

[features]
default = []
cli = ["dep:clap", "dep:colored", "dep:codespan-reporting", "dep:env_logger", "dep:indicatif", "dep:wdl-lint"]

[[bin]]
name = "wdl-analyzer"
path = "src/bin/wdl-analyzer.rs"
required-features = ["cli"]
